--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,19 @@
   <groupId>org.mountm</groupId>
   <artifactId>nfl-backtracking</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <packaging>jar</packaging>
 
   <name>nfl-backtracking</name>
   <url>http://maven.apache.org</url>
@@ -27,6 +39,7 @@
       <artifactId>trove4j</artifactId>
       <version>3.0.3</version>
     </dependency>
-    
+
+
   </dependencies>
 </project>
